初始化页面

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <title>黑客帝国文字下落</title>
 <style>
     html, body {margin:0; padding:0; background-color:#000;width:100%; height:100%;}
-    #divList {width:100%; height:100%; border:solid 3px gray; margin: 0px auto; overflow:hidden; position: relative;}
+    #divList {width:100%; height:100%;  margin: 0px auto; overflow:hidden; position: relative;}
     .divText {position: absolute;}
     .divText span {display:block; font-weight: bold; font-family:Courier New; color: #132a5a!important}
 </style>
-<script src="http://apps.bdimg.com/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="./js/js.js"></script>
 </head>
 <body>
     <div id="divList">
