--- a/index.html
+++ b/index.html
@@ -1,85 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>黑客帝国文字下落</title>
-<style>
-    html, body {margin:0; padding:0; background-color:#000;width:100%; height:100%;}
-    #divList {width:100%; height:100%;  margin: 0px auto; overflow:hidden; position: relative;}
-    .divText {position: absolute;}
-    .divText span {display:block; font-weight: bold; font-family:Courier New; color: #132a5a!important}
-</style>
-<script src="./js/js.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
+    <meta name="screen-orientation" content="portrait"/>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="full-screen" content="yes">
+    <meta name="x5-fullscreen" content="true">
+    <link rel="stylesheet" href="./css/swiper-4.3.3.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div id="divList">
+    <div class="box">
+        <!-- <div class="header">
+            <p id="headerText"></p>
+        </div> -->
+        <div class="section">
+            <!-- 轮 播 -->
+            <div class="swiper-container">
+                <div class="swiper-wrapper"></div>
+                <!-- 如 果 需 要 分 页 器 -->
+                <div class="swiper-pagination"></div>
+            </div>
+            <!-- 标 题 -->
+            <div class="title">
+                <p class="TwoElip" id="title"></p>
+            </div>
+            <!-- 规 格 -->
+            <ul class="content" id="content"></ul>
+            <!-- 商 品 详 情 -->
+            <div class="details">
+                <div class="details_header">
+                    商品详情
+                </div>
+                <div id="detail"></div>
+            </div>
+        </div>
     </div>
-<script>
-function rand(min, max){
-    return min + Math.round(Math.random() * (max - min));
- }
-function add(){
-    var x = rand(0, 2000);
-    var html = '<div class="divText" style="left:' + x + 'px; ">';
-    /*
-    var color1 = [];
-    var color2 = [];
-    var color3 = [];
-    var color4 = [];
-    var color5 = [];
-    var color6 = [];
-    for (var i=1; i<17; i++)
-    {
-    var f = i.toString(16);
-    color1.push('0' + f + '0');
-    color2.push(f + '00');
-    color3.push('00' + f);
-    color4.push('0' + f + f);
-    color5.push(f + f + '0');
-    color6.push(f + '0' + f);
-    }
-    var color = [color1, color2, color3, color4, color5, color6];
-    var ci = rand(0, 5);
-    */
-    var color = [];
-    for (var i=1; i<17; i++){
-        var f = i.toString(10);
-        color.push('0' + f + '0');
-    }
-    var fontSize = rand(9, 24);
-    for (var i=1; i<17; i++){
-        var c = rand(0, 1);
-        // var c = String.fromCharCode(c);
-        // html += '<span class="s' + i + '" style="color:#' + color[ci][i-1] + '; font-size:' + fontSize + 'px;">' + c + '</span>';
-        html += '<span class="s' + i + '" style="color:#' + color[i-1] + '; font-size:' + fontSize + 'px; text-shadow:0px 0px 10px #' + color[i-1] + ';">' + c + '</span>';
-    }
-    html += '</div>';
-    $('#divList').append(html);
-}
-function run(){
-    var x = rand(0, 130);
-    if (x < 100){
-        add();
-    }
-    $('#spanCount').html($('.divText').size());
-    $('.divText').each(function(){
-    var y = $(this).css('bottom');
-    y = parseInt(y);
-    y -= $(this).find('span').eq(0).height();
-    $(this).css('bottom', '' + y + 'px');
-    if (y + $(this).height() <= 0){
-        $(this).remove();
-        return;
-    }
-    $(this).find('span').each(function(){
-        var c = rand(0, 1);
-        // var c = String.fromCharCode(c);
-        $(this).html(c);
-    });
-    });
-    window.setTimeout(run, 300);
-}
-run();
-</script>
+<script type="text/javascript" src="./js/swiper-4.3.3.min.js"></script>
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="./js/sha1.js"></script>
+<script type="text/javascript" src="./js/js.js"></script>
 </body>
 </html>
