--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="x5-fullscreen" content="true">
     <link rel="stylesheet" href="./css/swiper-4.3.3.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title></title>
 </head>
 <body>
     <div class="box">
