--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
     <meta name="screen-orientation" content="portrait"/>
@@ -8,41 +8,14 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
-    <link rel="stylesheet" href="./css/swiper-4.3.3.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <title></title>
-</head>
-<body>
-    <div class="box">
-        <!-- <div class="header">
-            <p id="headerText"></p>
-        </div> -->
-        <div class="section">
-            <!-- 轮 播 -->
-            <div class="swiper-container">
-                <div class="swiper-wrapper"></div>
-                <!-- 如 果 需 要 分 页 器 -->
-                <div class="swiper-pagination"></div>
-            </div>
-            <!-- 标 题 -->
-            <div class="title">
-                <p class="TwoElip" id="title"></p>
-            </div>
-            <!-- 规 格 -->
-            <ul class="content" id="content"></ul>
-            <!-- 商 品 详 情 -->
-            <div class="details">
-                <div class="details_header">
-                    商品详情
-                </div>
-                <div id="detail"></div>
-            </div>
-        </div>
+    <title>elm</title>
+    <link href="./static/css/app.css" rel="stylesheet"></head>
+  <body>
+    <div id="app">
+    	<router-view></router-view>
     </div>
-<script type="text/javascript" src="./js/swiper-4.3.3.min.js"></script>
-<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="./js/sha1.js"></script>
-<script type="text/javascript" src="./js/js.js"></script>
-</body>
+    <script type="text/javascript" src="./static/js/manifest.js">
+    </script><script type="text/javascript" src="./static/js/vendor.js">
+    </script><script type="text/javascript" src="./static/js/app.js"></script>
+  </body>
 </html>
