--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>简历</title>
+	<title>张玉东个人简历</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
